swagger增加请求头token认证
